--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,3 +8,33 @@ box-sizing: border-box; Is to recalculate the padding and border (not matgin)
     padding: 0; 
     margin: 0; 
 }
+body{
+    background-color: rgb(61, 57, 57);
+    color: white;
+}
+.Header .logo{
+    max-width: 700px;
+    margin: auto;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
+
+
+.Header .switch{
+    width: 120px;
+    font-size: small;
+}
+
+@media (min-width: 300px)  {
+    .Header img{
+        max-width: 300px;
+    }
+}
+
+@media (min-width: 768px)  {
+    .Header img{
+        max-width: 700px;
+    }
+}
